--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Sign Up" %>
 <% content_for :page_title, "Create your account" %>
-<% content_for :page_subtitle, "Start your journey with ActiveAgent today" %>
+<% content_for :page_subtitle, "Start your journey with ActiveRabbit today" %>
 <% content_for :layout, "auth" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), local: true, html: { class: "space-y-6" }) do |f| %>
