--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -1,4 +1,6 @@
-<% content_for :page_title, "Settings" %>
+<% content_for :page_title do %>
+  Settings
+<% end %>
 
 <div class="bg-white rounded-lg shadow">
   <div class="px-6 py-4 border-b border-gray-200">
