--- a/app/views/admin/performance/action_detail.html.erb
+++ b/app/views/admin/performance/action_detail.html.erb
@@ -1,10 +1,12 @@
-<% content_for :page_title, "Performance: #{@target}" %>
+<% content_for :page_title do %>
+  Performance: <%= @target %>
+<% end %>
 
 <!-- Breadcrumb -->
 <nav class="flex mb-6" aria-label="Breadcrumb">
   <ol class="flex items-center space-x-4">
     <li>
-      <%= link_to admin_project_performance_path(@project), class: "text-gray-500 hover:text-gray-700" do %>
+      <%= link_to project_performance_path(@project), class: "text-gray-500 hover:text-gray-700" do %>
         Performance
       <% end %>
     </li>
